- 10-05-04: Mob\\dungeon\\prt_sewb_dun.txt - GTB update. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2313 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 10-05-04: Mob\dungeon\prt_sewb_dun.txt - GTB update. [Tsusai]
 - 09-25-04: Mob\dungeon\gld_dun.txt - Fixed DoppelGanger spawn. [Tsusai]
 - 09-21-04: Town\Town_Jawaii.txt - Added English jawaii. [Muad_Dib]
 - 09-21-04: Town\Town_Guide.txt - Added English Niflheim guide. [Muad_Dib]
