--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,7 +1,8 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 -------------------------------------------------------------------------------- 
-- 10-17-04: Event/event_Nenkaras.txt - Changed Position of Maid Inn in Alberta.[Kalegula]
+- 10-17-04: Event\Event_Hairdresser.txt - Added Hairdresser to the NPC's. [Kalegula]
+- 10-17-04: Event\Event_Nenkaras.txt - Changed Position of Maid Inn in Alberta.[Kalegula]
 - 10-16-04: Mob\field\payon_fild.txt - Added Deviling spawn too payon field04. [Muad_Dib]
 - 10-13-04: Event\Event_Nenkaras.txt - Fixed a couple of typo's. [Muad_Dib]
 - 10-12-04: Warps\*\*.txt - Modified all used random warp uses. [Tsusai]
