--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 -------------------------------------------------------------------------------- 
+- 10-17-04: Event\Event_PVP.txt - Changed Position of the PvP NPC's in Alberta. [Kalegula]
 - 10-17-04: Event\Event_Hairdresser.txt - Added Hairdresser to the NPC's. [Kalegula]
 - 10-17-04: Event\Event_Nenkaras.txt - Changed Position of Maid Inn in Alberta.[Kalegula]
 - 10-16-04: Mob\field\payon_fild.txt - Added Deviling spawn too payon field04. [Muad_Dib]
