- 10-17-04: Jobs\*\*.txt - Removed all instances of "set joblevel".  Jobchange does this. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2327 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 -------------------------------------------------------------------------------- 
+- 10-17-04: Jobs\*\*.txt - Removed all instances of "set joblevel".  Jobchange does this. [Tsusai]
 - 10-17-04: Event\Event_Hairdresser.txt - Fixed Hairdresser NPC's. [Kalegula]
 - 10-17-04: Event\Event_PVP.txt - Changed Position of the PvP NPC's in Alberta. [Kalegula]
 - 10-17-04: Event\Event_Hairdresser.txt - Added Hairdresser to the NPC's. [Kalegula]
