--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,11 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 -------------------------------------------------------------------------------- 
+- 10-27-04: GvG\nguild_###.txt - Added Guild Storage Service option. [Muad_Dib]
+- 10-27-04: GvG\gefg_cas0#.txt - Added Guild Storage Service option. [Muad_Dib]
+- 10-27-04: GvG\aldeg_cas0#.txt - Added Guild Storage Service option. [Muad_Dib]
+- 10-27-04: GvG\payg_cas0#.txt - Added Guild Storage Service option. [Muad_Dib]
+- 10-27-04: GvG\prtg_cas0#.txt - Added Guild Storage Service option. [Muad_Dib]
 - 10-24-04: Town\Town_Prontera.txt - Fixed Typos/Grammar in Official town npc's. [Kai]
 - 10-20-04: Town\Town_Ayothaya.txt - Added Town Ayothaya with placeholder npc's. [Muad_Dib]
 - 10-20-04: Warpdungeons\ayo_dun.txt - Added Ayothaya warps. [Muad_Dib]
