--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,9 @@
 --------------------------------------------------------------------------------
- Fusion 1.213 - August 29th, 2004
+ Fusion 1.213 - November 26th, 2004
 -------------------------------------------------------------------------------- 
+- 11-20-04: Town\Town_Niflheim.txt - Added 1st Version(semi working) of Town Niflheim. [Muad_Dib]
+- 11-20-04: Warpdungeons\ayo_dun.txt - Updated Ayothaya Dungeon warps. [Muad_Dib]
+- 11-20-04: Town\Town_Jawaii.txt - Changed Dancer Names. [Muad_Dib]
 - 11-11-04: Job\Job_2-1\Job2_Priest.txt - Official Priest Quest done. [Tsusai]
 - 11-06-04: Mob\dungeon\ayo_dun.txt - Added ayothaya mob spawns doesn't show correct sprites with current exe. [Muad_Dib]
 - 11-06-04: Mob\field\ayo_fild.txt - Added ayothaya mob spawns doesn't show correct sprites with current exe. [Muad_Dib]
