- 12-01-04: Town\Town_Niflheim.txt - Updated with inputstr. [Muad_Dib]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2346 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - December ??th, 2004
 -------------------------------------------------------------------------------- 
+- 12-01-04: Town\Town_Niflheim.txt - Updated with inputstr. [Muad_Dib]
 - 11-30-04: Town\Town_Niflheim.txt - Touchups. [Tsusai]
 - 11-30-04: Ontouch updates over various files. [Tsusai]
 - 11-30-04: Town\Town_Niflheim.txt - Added reseteventmob. [Muad_Dib]
