- 12-02-04: Town\Town_Niflhein.txt - changed some logic in the prayer exam. [Tsusai] - 12-02-04: Town\Town_Umbala.txt - Moved bungie warp to warps section as a pure warp. [Tsusai]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2348 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - December ??th, 2004
 -------------------------------------------------------------------------------- 
+- 12-02-04: Town\Town_Niflhein.txt - changed some logic in the prayer exam. [Tsusai]
+- 12-02-04: Town\Town_Umbala.txt - Moved bungie warp to warps section as a pure warp. [Tsusai]
 - 12-02-04: Event\Event_KafraP.txt - Changed Reward Sweet Potato with Carrots. [Muad_Dib]
 - 12-02-04: Quest\Quest_skill\Cart_Revolution.txt - Updated With OnTouch. [Muad_Dib]
 - 12-02-04: Quest\Quest_skill\Crazy_Uproar_Quest.txt - Updated with OnTouch. [Muad_Dib]
