--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - December ??th, 2004
 -------------------------------------------------------------------------------- 
+- 12-02-04: Job\Job_2-1\Job2_Priest.txt - Tweaked the overall timer. [Tsusai]
 - 12-02-04: Town\Town_Niflhein.txt - changed some logic in the prayer exam. [Tsusai]
 - 12-02-04: Town\Town_Umbala.txt - Moved bungie warp to warps section as a pure warp. [Tsusai]
 - 12-02-04: Event\Event_KafraP.txt - Changed Reward Sweet Potato with Carrots. [Muad_Dib]
