- 12-27-04: Shop\Payon.txt - added Arrow Quivers and Status Ailment arrows shop. [Muad_Dib] - 12-27-04: Shop\Geffen.txt - added Skill Scrolls shop. [Muad_Dib] - 12-27-04: Event\Event_Marriage.txt - Added placeholder npc's for a future wedding script. [Muad_Dib] - 12-27-04: Event\Event_Potion.txt - Cleaned up and updated the script. [Muad_Dib] - 12-27-04: Event\Event_Dye.txt - Cleaned up and updated the script [Muad_Dib] - 12-27-04: Event\Event_Hairdresser.txt - Changed a few typo's. [Muad_Dib]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2352 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,12 @@
 --------------------------------------------------------------------------------
- Fusion 1.213 - December ??th, 2004
+ Fusion 1.213 - January 1st, 2005
 -------------------------------------------------------------------------------- 
+- 12-27-04: Shop\Payon.txt - added Arrow Quivers and Status Ailment arrows shop. [Muad_Dib]
+- 12-27-04: Shop\Geffen.txt - added Skill Scrolls shop. [Muad_Dib]
+- 12-27-04: Event\Event_Marriage.txt - Added placeholder npc's for a future wedding script. [Muad_Dib]
+- 12-27-04: Event\Event_Potion.txt - Cleaned up and updated the script. [Muad_Dib]
+- 12-27-04: Event\Event_Dye.txt - Cleaned up and updated the script [Muad_Dib]
+- 12-27-04: Event\Event_Hairdresser.txt - Changed a few typo's. [Muad_Dib]
 - 12-06-04: Job\Job_2-1\Job2_Wizard.txt - Areawarp added. [Tsusai]
 - 12-02-04: Job\Job_2-1\Job2_Priest.txt - Tweaked the overall timer. [Tsusai]
 - 12-02-04: Town\Town_Niflhein.txt - changed some logic in the prayer exam. [Tsusai]
