--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - January 1st, 2005
 -------------------------------------------------------------------------------- 
+- 12-28-04: Town\Town_Siglude.txt - added temporarily Repairman npc's in geffen and aldebaran. [Muad_Dib]
+- 12-28-04: Town\Guide\Aldebaran_Guide.txt - Corrected 2 typo's. [Muad_Dib]
 - 12-28-04: Mob\field\yuno_fild.txt - Updated mobs to the new fields. [Muad_Dib]
 - 12-28-04: Town\Town_Juno.txt - Added Sailor npc on yuno field 11. [Muad_Dib]
 - 12-28-04: Warp\fields\yuno_fild.txt - Updated warps to fit with the new fields. [Muad_Dib]
