- 12-30-04: WarpWarp\dungeons\ama_dun.txt - Updated Amatsu warps. [Muad_Dib] - 12-30-04: WarpWarp\dungeons\gon_dun.txt - Updated Kunlun warps. [Muad_Dib] - 12-30-04: WarpWarp\fields\ama_fild.txt - Updated Amatsu warps. [Muad_Dib] - 12-30-04: WarpWarp\fields\gon_fild.txt - Updated Kunlun warps. [Muad_Dib] - 12-30-04: WarpWarp\towns\Amatsu.txt - Updated Amatsu warps. [Muad_Dib] - 12-30-04: Warp\towns\Gonryon.txt - Updated Kunlun warps. [Muad_Dib]
git-svn-id: svn+ssh://svn.code.sf.net/p/fusion/code/scripts/trunk@2356 a2e91628-aa1e-412e-9966-34abe3d8d708

--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,7 +1,13 @@
 --------------------------------------------------------------------------------
- Fusion 1.213 - January 1st, 2005
+ Fusion 1.213 - January ???, 2005
 -------------------------------------------------------------------------------- 
-- 12-29-04: Warp\dungeons\mag_dun.txt - Updated magma dungeon warps. [Muad_Dib]
+- 12-30-04: WarpWarp\dungeons\ama_dun.txt - Updated Amatsu warps. [Muad_Dib]
+- 12-30-04: WarpWarp\dungeons\gon_dun.txt - Updated Kunlun warps. [Muad_Dib]
+- 12-30-04: WarpWarp\fields\ama_fild.txt - Updated Amatsu warps. [Muad_Dib]
+- 12-30-04: WarpWarp\fields\gon_fild.txt - Updated Kunlun warps. [Muad_Dib]
+- 12-30-04: WarpWarp\towns\Amatsu.txt - Updated Amatsu warps. [Muad_Dib]
+- 12-30-04: Warp\towns\Gonryon.txt - Updated Kunlun warps. [Muad_Dib]
+- 12-29-04: Warp\dungeons\mag_dun.txt - Updated Magma Dungeon warps. [Muad_Dib]
 - 12-29-04: Mob\field\yuno_fild.txt - Added Plants to the fields. [Muad_Dib]
 - 12-29-04: Town\Town_Juno.txt - Fixed a couple of tyo's. [Muad_Dib]
 - 12-29-04: Warp\fields\yuno_fild.txt - Updated magma dungeon entrance warp. [Muad_Dib]
