--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - January ???, 2005
 -------------------------------------------------------------------------------- 
+- 01-08-05: Mob\field\yuno_fild.txt - Fixed the green plants on field 11. [Muad_Dib]
 - 01-04-05: Mob\field\yuno_fild.txt - Changed Angeling to Archangeling(wrong translation). [Muad_Dib]
 - 01-04-05: Mob\field\yuno_fild.txt - Added the new Official Mobs. [Muad_Dib]
 - 12-31-04: Moved A2J script to archive, it's not official. [Tsusai]
