--- a/Scripts/Official Scripts/Changelog.txt
+++ b/Scripts/Official Scripts/Changelog.txt
@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.214 - ??????, 2005
 -------------------------------------------------------------------------------- 
+- 02-13-05: Town\Kafra\Xxxxx_Kafra.txt - Updated/Fixed all kafra's. [Muad_Dib]
 - 01-30-05: Shop\Prontera.txt - Fixed Prontera Tool Dealer. [Muad_Dib]
 - 01-30-05: Mob\dungeon\in_sphinx_dun.txt - Fixed Sphinx lvl 2 Spawns. [Muad_Dib]
 - 01-28-05: Mob\dungeon\ayo_dun.txt - Added Official Ayathaya mobs. [Muad_Dib]
